--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -8,11 +8,32 @@ on:
 
 jobs:
   check-haneko:
-    # if: github.repository == 'ramankarki/learn-docker-frontend'
-    name: 'Atikai check haneko'
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: 'linux version check haneko'
-        run: cat /etc/os-release
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'yarn'
+
+      - name: yarn install
+        run: yarn
+
+      - name: create .env file
+        run: |
+          touch .env
+          echo NEXT_PUBLIC_PROD_URL="https://www.badapp.me/api/v1" >> .env
+          echo NEXT_PUBLIC_PROD_SOCKET_URL="https://www.badapp.me/api/v1/socket" >> .env
+          echo NEXT_PUBLIC_DEV_SOCKET_URL="https://www.badapp.me/api/v1/socket" >> .env
+
+          echo NEXT_PUBLIC_NODE_ENV="production" >> .env
+
+      - name: creating production build
+        run: yarn build
+
+      - name: restart app process using pm2
+        run: |
+          pm2 stop frontend
+          pm2 start frontend
