--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,39 +1,53 @@
-name: CICD
+name: Demo Push
 
 on:
   push:
-    branches: ['main']
+    # Publish `master` as Docker `latest` image.
+    branches:
+      - main
+
+    # Publish `v1.2.3` tags as releases.
+    tags:
+      - v*
+
+  # Run tests for any PRs.
   pull_request:
-    branches: ['main']
+
+env:
+  IMAGE_NAME: mero-image
 
 jobs:
-  check-haneko:
+  # Push image to GitHub Packages.
+  # See also https://docs.docker.com/docker-hub/builds/
+  push:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
 
-      - name: yarn install
-        run: yarn
+      - name: Build image
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
 
-      - name: create .env file
+      - name: Log in to registry
+        # This is where you will update the personal access token to GITHUB_TOKEN
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+
+      - name: Push image
         run: |
-          touch .env
-          echo NEXT_PUBLIC_PROD_URL="https://www.badapp.me/api/v1" >> .env
-          echo NEXT_PUBLIC_PROD_SOCKET_URL="https://www.badapp.me/api/v1/socket" >> .env
-          echo NEXT_PUBLIC_DEV_SOCKET_URL="https://www.badapp.me/api/v1/socket" >> .env
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
 
-          echo NEXT_PUBLIC_NODE_ENV="production" >> .env
-
-      - name: creating production build
-        run: yarn build
-
-      - name: restart app process using pm2
-        run: |
-          pm2 stop frontend
-          pm2 start frontend
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "main" ] && VERSION=latest
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
